--- a/desenWeb/API-RESTFull-V1/src/main/resources/application.properties
+++ b/desenWeb/API-RESTFull-V1/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=API-RESTFull-V1
+spring.datasource.url=jdbc:mysql://localhost:3306/banco
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
