--- a/desenWeb/Trabalhos/TrabalhoFinal/react/package.json
+++ b/desenWeb/Trabalhos/TrabalhoFinal/react/package.json
@@ -18,7 +18,9 @@
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.11.2",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
